Upload after class activity

--- a/about.html
+++ b/about.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Remember to link to your CSS file! -->
 </head>
+
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./menu.html">Menu</a>
+        <a id="about" href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>Wigg, TX</li>
+            <li>Pigeon, CA</li>
+            <li>Opeg, OH</li>
+            <li>Lindal, CA</li>
+        </ul>
+
+        <h2>Origin Story</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur sollicitudin odio, vel dignissim
+            felis. Ut pellentesque justo in ligula lobortis, sed mollis sapien tempor. Morbi velit leo, ultricies eget
+            placerat et, consequat et metus. Sed congue hendrerit maximus. Phasellus et egestas magna, eget fermentum
+            arcu. Fusce porttitor non velit ac interdum. Pellentesque quis lacus vel felis interdum aliquet sit amet eu
+            ante. Etiam sit amet lacinia justo. Aliquam mauris massa, molestie ut nunc non, fermentum euismod mauris.
+            Donec sit amet dui in est sollicitudin facilisis. Aliquam lacinia volutpat ex, a mollis nibh bibendum nec.
+            Donec non vulputate dui. Aliquam vitae eros faucibus, ultrices nibh in, accumsan metus. Quisque eget massa
+            erat.
+
+            Phasellus tortor leo, aliquam eu eleifend in, ultrices eu nisl. Mauris a luctus eros. Aliquam faucibus in
+            urna nec fringilla. Cras sit amet aliquet nibh. Phasellus felis tellus, congue sit amet dapibus et, viverra
+            id metus. Duis at orci quis enim rutrum suscipit. Donec eget tristique purus. Ut convallis mi in urna
+            ornare, hendrerit convallis dolor imperdiet. Nunc sed tempus diam. Morbi eros orci, iaculis tempus
+            vestibulum nec, rhoncus non neque. Integer placerat, dolor ac tempor condimentum, mi neque consectetur
+            ipsum, ac ultricies orci augue vitae risus. Pellentesque sollicitudin, ex et pulvinar faucibus, lorem leo
+            pharetra eros, vel semper felis lacus id justo. Curabitur vitae metus diam. Sed ac luctus mi. Integer non
+            velit est. Integer aliquet metus ac commodo aliquam.
+
+            Curabitur varius sagittis vestibulum. Praesent pharetra euismod tellus non venenatis. Nulla facilisi.
+            Vivamus velit leo, tincidunt sit amet lobortis eu, porttitor in ex. Nulla suscipit sed lacus et tempus. Ut
+            eget venenatis magna. Maecenas dapibus tortor a placerat pharetra. In hac habitasse platea dictumst. Nam
+            ornare in dui quis ultrices. In non lacinia neque, nec tincidunt velit. Etiam tristique sagittis libero, ac
+            dictum enim congue eu. Ut pretium ac neque vel bibendum. In ultricies rhoncus enim id sagittis. Sed vehicula
+            lacinia placerat. Pellentesque et eros felis.
+        </p>
+        <img alt="About Us Image" src="./assets/images/about.jpg">
     </main>
+    <footer id="footer">
+        <p>Thank you for support at H-Thai-ML
+            ❤️
+            ❤️
+            ❤️</p>
+    </footer>
 </body>
+
 </html>
