--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Remember to link to your CSS file! -->
 </head>
+
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./about.html">About</a>
+        <a id="contact" href="./contact.html">Contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,8 +32,23 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong><i class="fa fa-phone"></i> Phone Number:</strong> 800-555-6666
+        </p>
+        <strong><i class="fa fa-address-card"></i> Address:</strong>
+        <Address>
+            568 fake st
+            Westcliff, CA 92564
+        </Address>
+        <p>
+            <strong><i class="fa fa-envelope"></i> Email:</strong> service@hthaiml.com
         </p>
     </main>
+    <footer id="footer">
+        <p>Thank you for support at H-Thai-ML
+            ❤️
+            ❤️
+            ❤️</p>
+    </footer>
 </body>
+
 </html>
