--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Thai-ML</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
+
 <body>
     <!-- HOME PAGE -->
+    <div id="holiday">
+        <h1>Thanksgiving Holiday</h1>
+        <p>Our restaurant will be closed on November 25th and 26th in observance of the September 5, 2022 Labor Day
+            holiday.</p>
+    </div>
     <!-- TODO: Navbar here -->
+    <nav>
+        <a id="home" href="./index.html">Home</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h2>Pick one!</h2>
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+
+        <img alt="Tables in table in restaurant Image" src="./assets/images/table-in-restaurant.jpg">
+
     </main>
+    <footer id="footer">
+        <p>Thank you for support at H-Thai-ML
+            ❤️
+            ❤️
+            ❤️</p>
+    </footer>
 </body>
+
 </html>
