--- a/menu.html
+++ b/menu.html
@@ -1,58 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Our Menu</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Remember to link to your CSS file! -->
 </head>
+
 <body>
     <!-- MENU PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a id="menu" href="./menu.html">Menu</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <!-- Your job is to make the menu items in each section below a proper table! -->
-        Appetizers
+        <h1>Our Menu</h1>
+        <!-- TODO: Home page code here-->
+        <h2>Appetizers</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><i class="fa fa-fire"></i>Chicken Satay</th>
+                    <td>$7.95</td>
+                </tr>
+                <tr>
+                    <th scope="row">Fresh Rolls</th>
+                    <td>$6.95</td>
+                </tr>
+            </tbody>
 
-        Name Price
-        Chicken Satay $7.95
-        Fresh Rolls $6.95
-        
-        Lunch
+        </table>
+        <h2>Lunch</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Panang Curry</th>
+                    <td>$9.95</td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="fa fa-fire"></i>Red Curry</th>
+                    <td>$9.95</td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="fa fa-star"></i>Yellow Curry</th>
+                    <td>$8.95</td>
+                </tr>
+                <tr>
+                    <th scope="row">Tom Ka Soup</th>
+                    <td>$8.95</td>
+                </tr>
+                <tr>
+                    <th scope="row">Tom Yum Soup</th>
+                    <td>$8.95</td>
+                </tr>
+            </tbody>
+        </table>
 
-        Name Price
-        Panang Curry $9.95
-        Red Curry $9.95
-        Yellow Curry $8.95
-        Tom Ka Soup $8.95
-        Tom Yum Soup $8.95
+        <h2>Dinner</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Pad Thai</th>
+                    <td>$10.95</td>
+                </tr>
+                <tr>
 
-        Dinner
-
-        Name Price
-        Pad Thai $10.95
-        Pad See Ew $10.49
-        Rad Nah $10.49
-
-        Dessert
-
-        Name Price
-        Black Sticky Rice Pudding $3.99
-        Mango Sticky Rice $5.99
-
-        Beverages
-
-        Name Price
-        Thai Iced Coffee $3.49
-        Thai Iced Tea $3.49
-        Unsweetened Iced Tea $2.49
-
-        Side Orders
-        
-        Name Price
-        Jasmine rice $1.99
-        Brown rice $2.49
-        Cucumber Salad $2.99        
+                    <th scope="row"><i class="fa fa-fire"></i>Pad See Ew</th>
+                    <td>$10.49</td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="fa fa-star"></i>Rad Nah</th>
+                    <td>$10.49</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Dessert</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Black Sticky Rice Pudding</th>
+                    <td>$3.99</td>
+                </tr>
+                <tr>
+                    <th scope="row">Mango Sticky Rice</th>
+                    <td>$5.99</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Beverages</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><i class="fa fa-star"></i>Thai Iced Coffee</th>
+                    <td>$3.49</td>
+                </tr>
+                <tr>
+                    <th scope="row">Thai Iced Tea</th>
+                    <td>$3.49</td>
+                </tr>
+                <tr>
+                    <th scope="row">Unsweetened Iced Tea</th>
+                    <td>$2.49</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Side Orders</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Jasmine rice </th>
+                    <td>$1.99</td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="fa fa-star"></i>Brown rice</th>
+                    <td>$2.49</td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="fa fa-star"></i>Cucumber Salad</th>
+                    <td>$2.99</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
+    <footer id="footer">
+        <p>Thank you for support at H-Thai-ML
+            ❤️
+            ❤️
+            ❤️</p>
+    </footer>
 </body>
+
 </html>
